[BlinkGenPropertyTrees] Only track element ids used by animations.

The compositor only needs to know about the existence of element ids for
property tree nodes used to tick animations. By filtering out other
nodes, we can fix the duplicate registration of scrolling element ids as
well as reduce the size of the tracked element id set.

Bug: 913170,934511
Change-Id: Ia22495a10dc2e5eaab1f4cb596a87cb8b08e383c
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1456949
Commit-Queue: Robert Flack <flackr@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#637710}
Former-commit-id: 0353702a316445d8da0efd9db7a75c7534dd96c0